# botele

./: .gitignore  .pyckage  README.md  setup.cfg
archive/gremioecibot/: .bot  gremioecibot.py
archive/gugubot/: botdogugubot.py
archive/ovilabot/: .bot  ovilabot.py
archive/pedrobot/: pedromxavier_bot.py
archive/pedromxavierbot/: .bot  pedromxavierbot.py
archive/testbot/: .bot  testbot.py
archive/vilabot/: vilabot.py
src/botele/: __init__.py  botele.py
src/botele/botele/: __init__.py  botele.py
src/botele/botlib/: __init__.py  botlib.py  botprocess.py
src/botele/cli/: alive.py  banner.py  cli.py  install.py  kill.py  list.py  list_.py  make.py  run.py  setup.py  uninstall.py
src/botele/filter/: __init__.py  filter.py
src/botele/game/: game.py
src/botele/layer/: layer.py
src/botele/proxy/: __init__.py
src/telebot/bot/: bot.py
src/telebot/botlib/: botlib.py
src/telebot/filters/: filters.py
