[metadata]
name = telebot
version = 0.1.0
author = Pedro Maciel Xavier
author_email = pedromxavier@poli.ufrj.br
description = Telegram Bot API Wrapper
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
	Programming Language :: Python :: 3
url = https://github.com/pedromxavier/telebot
project_urls = 
	Bug Tracker = https://github.com/pedromxavier/telebot/issues
	Source = https://github.com/pedromxavier/telebot

[options]
python_requires = >=3.7, <4
package_dir = 
	=src
packages = 
	telebot
scripts = 
	bin/telebot
install_requires =
	python-telegram-bot

[options.data_files]
telebot_data = 
	data/.telebot-config

[options.entry_points]
console_scripts = 
	telebot = telebot:main

